# K_T_hl42

app/: .gitignore  README.md  pyproject.toml
app/api/: main.py
app/api/routes/: __init__.py  candidates.py  health.py  logs.py  runs.py  schedules.py  talent.py
app/connectors/: __init__.py  artspace.py  base.py  caha_pdf.py  events.py  guma.py  instagram.py  instagram_stub.py  reddit.py  storage.py  tiktok.py  tiktok_stub.py  uog.py  utils.py
app/connectors/fixtures/: artspace_residents.html  events_sample.html  guma_directory.json  instagram_sample.json  reddit_sample.html  tiktok_sample.json  uog_directory.csv
app/infra/: docker-compose.yml  env.example  models.yaml
app/infra/dockerfiles/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
app/models/: __init__.py  alembic.ini  base.py  session.py  tables.py
app/models/alembic/: env.py  script.py.mako
app/models/alembic/versions/: 0001_initial_schema.py  0002_institutional_connector_tags.py
app/nlp/: dedupe.py  model_router.py  scoring.py  taggers.py
app/tests/: conftest.py  test_api_routes.py  test_connectors.py  test_nlp_taggers.py  test_scheduler_worker.py
app/tests/fixtures/: events_calendar.html  reddit_thread.html
app/web/: package.json
app/web/app/: layout.tsx  page.tsx
app/workers/: __init__.py  scheduler.py  tasks.py
