[tool.poetry]
name = "guam-scout-console"
version = "0.1.0"
description = "Local operator-first scouting console for Guam creators"
authors = ["Kutturan Team <dev@kutturan.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = { extras = ["standard"], version = "0.30.1" }
sqlalchemy = "2.0.32"
alembic = "1.13.2"
psycopg2-binary = "2.9.9"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
requests = "2.32.3"
httpx = "0.27.2"
beautifulsoup4 = "4.12.3"
pdfplumber = "0.11.4"
PyPDF2 = "3.0.1"
python-crontab = "3.0.0"
redis = "5.0.7"
rq = "1.15.1"
pgvector = "0.2.5"
python-dotenv = "1.0.1"
tenacity = "8.3.0"
croniter = "2.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.23.8"
pytest-cov = "5.0.0"
ruff = "0.6.0"
mypy = "1.11.2"
playwright = "1.47.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

